<resources>
    <string name="app_name">KcDonate</string>
    <string name="join">Join Our Family</string>
    <string name="cash">Cash Donation</string>
    <string name="group">Group Donation</string>
    <string name="dropOff">Drop Off Location</string>
    <string name="pickup">Pick Up Service</string>
    <string name="help">Need Help?</string>
    <string name="contact">Contact Us</string>
    <string name="selection">Welcome to KcDonate</string>
    <string name="title_activity_help">help</string>
    <string name="moneyDonateNow">Donate Now !</string>
    <string name="fiveDollar">$ 5 </string>
    <string name="donatePrice">0</string>
    <string name="tenDollar">$ 10</string>
    <string name="twentyDollar">$ 20</string>
    <string name="EnterAmount">Please Enter the Amount</string>
    <string name="dollarSign">$</string>
    <string name="otherHint">Enter the Amount</string>
    <string name="textNumber">0</string>
    <string name="totalAmountView"></string>
    <string name="dropOffLocTx1">North KC Drop Off Location:
        \n Price Chopper
        \n 9107 NW, MO-45
        \n Parkville, MO 64152 </string>
    <string name="dropOffLocBtnTx1">Take me there</string>
    <string name="dropOffLocTx2">
        \n Whole Food Market
        \n 301 E 51st
        \n Kansas City MO 64112 </string>
    <string name="dropOffLocBtnTx2">Take me there</string>
    <string name="pickUpService">Need a pick up service?</string>
    <string name="pickUpServiceInfo">
           We will need your basic contact information and donate information.
        Once your request has been approve by our staff member, you will be getting a confirm e-mail.</string>
    <string name="pickUpServiceBtnTx">Continue to request a pick up service </string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="phoneNum">Phone</string>
    <string name="numbersOfItems">Please enter the numbers of items that you are going to donate.
        \nYou can leave a comment on the items or a short description of your items</string>
    <string name="clothing">Clothing</string>
    <string name="houseWare">House Ware</string>
    <string name="furniture">Furniture</string>
    <string name="electronic">Electronic Device</string>
    <string name="others">Others</string>
    <string name="totalItems">Total Items</string>
    <string name="totalItemsSum"></string>
    <string name="requestBtn">Request</string>
    <string name="addImage">+ Images</string>
    <string name="contactUs">Contact us
        \n
        \n 6400 N Cosby Ave
        \n Kansas City, MO 64151</string>
    <string name="callBtn">816-372-4777</string>
    <string name="phoneNumber">call</string>
    <string name="emailBtn">kcdonate@gmail.com</string>
</resources>
